objects/OF_Asset_Verticale__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asset Verticali</relationshipLabel>
        <relationshipName>Asset_Verticali</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Asset Verticali</relationshipLabel>
        <relationshipName>Asset_Verticali</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cardinalita_Scala__c</fullName>
        <label>Cardinalità Scala</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Civico__c</fullName>
        <label>Civico</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comune__c</fullName>
        <label>Comune</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Attivazione__c</fullName>
        <label>Data Attivazione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_DB_Building__c</fullName>
        <label>ID_DB_Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_DB_Scala_Palazzina__c</fullName>
        <label>ID DB Scala Palazzina</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_GIS_Scala_Palazzina__c</fullName>
        <label>ID GIS Scala Palazzina</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirizzo__c</fullName>
        <label>Indirizzo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inviato_PostGreSQL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inviato_PostGreSQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_isLavorazione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OF_isLavorazione</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PNI_OF_Civico__c</fullName>
        <label>PNI_OF_Civico</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNI_OF_Comune__c</fullName>
        <label>PNI_OF_Comune</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNI_OF_IDBuilding__c</fullName>
        <label>PNI_OF_IDBuilding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNI_OF_IDRisorsa__c</fullName>
        <label>PNI_OF_IDRisorsa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNI_OF_Indirizzo__c</fullName>
        <label>PNI_OF_Indirizzo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNI_OF_ParticellaToponomastica__c</fullName>
        <label>PNI_OF_ParticellaToponomastica</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Particella_Toponomastica__c</fullName>
        <label>Particella Toponomastica</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provincia__c</fullName>
        <label>Provincia</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regione__c</fullName>
        <label>Regione</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UI_Scala_Palazzina__c</fullName>
        <label>UI_Scala_Palazzina</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Billing</label>
        <type>Checkbox</type>
    </fields>
    <label>Asset Verticale</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Inviato_PostGreSQL__c</columns>
        <columns>PNI_OF_Civico__c</columns>
        <columns>PNI_OF_Comune__c</columns>
        <columns>PNI_OF_IDBuilding__c</columns>
        <columns>PNI_OF_IDRisorsa__c</columns>
        <columns>PNI_OF_Indirizzo__c</columns>
        <columns>PNI_OF_ParticellaToponomastica__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Asset Verticale Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Verticali</pluralLabel>
    <recordTypes>
        <fullName>OF_Asset_Verticale</fullName>
        <active>true</active>
        <label>Asset Verticale</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>